--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -8,7 +8,7 @@
     <com.ascentsmartwaves.andealr.custom.CustomTextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Version 1.3.2"
+        android:text="@string/app_version"
         android:id="@+id/version"
         android:gravity="center"
         android:textStyle="bold"
