--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,5 +35,8 @@
     <dimen name="twenty_four_dp">24sp</dimen>
     <dimen name="twenty_four_sp">24sp</dimen>
 
+    <dimen name="hundred_dp">100dp</dimen>
+    <dimen name="hundred_sp">100sp</dimen>
+
 
 </resources>
