--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -6,5 +6,6 @@
     <color name="textColor">#9e9e9e</color>
 
     <color name="black">#000</color>
+    <color name="white">#FFF</color>
 
 </resources>
