--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,6 @@
     <dimen name="five_dp">5dp</dimen>
     <dimen name="five_sp">5sp</dimen>
 
-
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="ten_sp">10sp</dimen>
 
@@ -35,8 +34,16 @@
     <dimen name="twenty_four_dp">24sp</dimen>
     <dimen name="twenty_four_sp">24sp</dimen>
 
+    <dimen name="twenty_five_dp">25dp</dimen>
+    <dimen name="twenty_five_sp">25sp</dimen>
+
     <dimen name="hundred_dp">100dp</dimen>
     <dimen name="hundred_sp">100sp</dimen>
+
+
+    <!-- Point sizes-->
+    <dimen name = "ten_pt">10pt</dimen>
+    <dimen name = "twelve_pt">12pt</dimen>
 
 
 </resources>
