--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -38,7 +38,7 @@
             android:id="@+id/contact_us_text_about_us_activity"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="We are keen to hear from you!\nConnect with us at shoot@andealr.com"
+            android:text="@string/contact_us_text"
             android:textColor="@color/white"
             android:gravity="center"
             android:textSize="@dimen/ten_pt"
