--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/logo_splashscreen"
+        android:id="@+id/logo_splash_screen"
         android:layout_gravity="center" />
 
 </LinearLayout>
