--- a/app/src/main/res/layout/include_reach_likes_redeem.xml
+++ b/app/src/main/res/layout/include_reach_likes_redeem.xml
@@ -18,7 +18,7 @@
         android:text="0"/>
 
     <com.ascentsmartwaves.andealr.custom.CustomTextView
-        android:id="@+id/reachText"
+        android:id="@+id/reach_static_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="@dimen/sixteen_sp"
@@ -41,12 +41,12 @@
         android:textColor="#000"
         android:textStyle="bold"
         android:text="0"
-        android:layout_toRightOf="@id/reachText"
+        android:layout_toRightOf="@id/reach_static_text"
         android:layout_marginLeft="10dp"
         />
 
     <com.ascentsmartwaves.andealr.custom.CustomTextView
-        android:id="@+id/likesText"
+        android:id="@+id/likes_static_text"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:textSize="@dimen/sixteen_sp"
@@ -66,7 +66,31 @@
         android:textColor="#000"
         android:textStyle="bold"
         android:text="0"
-        android:layout_toRightOf="@id/likesText"
+        android:layout_toRightOf="@id/likes_static_text"
+        android:layout_marginLeft="10dp"/>
+
+    <com.ascentsmartwaves.andealr.custom.CustomTextView
+        android:id="@+id/redeem_static_text"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="@dimen/sixteen_sp"
+        android:layout_centerVertical="true"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:text="Redeem"
+        android:layout_toRightOf="@id/redeem_counter_text_include"
+        android:layout_marginLeft="5dp"/>
+
+    <com.ascentsmartwaves.andealr.custom.CustomTextView
+        android:id="@+id/encashed_counter_text_include"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:textSize="@dimen/sixteen_sp"
+        android:layout_centerVertical="true"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:text="0"
+        android:layout_toRightOf="@id/redeem_static_text"
         android:layout_marginLeft="10dp"/>
 
     <com.ascentsmartwaves.andealr.custom.CustomTextView
@@ -76,8 +100,8 @@
         android:layout_centerVertical="true"
         android:textColor="#000"
         android:textStyle="bold"
-        android:text="Redeem"
-        android:layout_toRightOf="@id/redeem_counter_text_include"
+        android:text="Encashed"
+        android:layout_toRightOf="@id/encashed_counter_text_include"
         android:layout_marginLeft="5dp"/>
 
 </RelativeLayout>
