--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -6,11 +6,19 @@
     >
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/landing_recycler_view"
+        android:id="@+id/all_products_recycler_view_landing_fragment"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/all_deals_recycler_view_landing_fragment"
         android:scrollbars="vertical"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/all_products_recycler_view_landing_fragment"
+        />
 
 
     <ImageView
